tests/ui/duplicate-fmt.stderr
error: only one #[error(...)] attribute is allowed
 --> $DIR/tests/ui/duplicate-fmt.rs:5:1
  |
5 | #[error("...")]
  | ^^^^^^^^^^^^^^^
